@@ -671,7 +671,7 @@ class DirectoryTest {
 
         assertNbElementsInRepositories(3);
 
-        // assert that the broker message has been sent a update notification on directory
+        // assert that the broker message has been sent an update notification on directory
         Message<byte[]> message = output.receive(TIMEOUT, directoryUpdateDestination);
         assertEquals("", new String(message.getPayload()));
         MessageHeaders headers = message.getHeaders();
@@ -2498,59 +2498,80 @@ class DirectoryTest {
         ElementAttributes rootAttributes = directoryService.createRootDirectory(new RootDirectoryAttributes("root", userId, null, null, null, null), userId);
         testNotificationDirectory(rootAttributes.getElementUuid(), NotificationType.ADD_DIRECTORY, userId);
 
-        ElementAttributes element1Attributes = directoryService.createElement(
-                DirectoryTestUtils.toElementAttributes(null, "element1", "TYPE", userId), rootAttributes.getElementUuid(), userId, false);
+        ElementAttributes composite1Attributes = directoryService.createElement(
+                DirectoryTestUtils.toElementAttributes(null, "composite1", "ELEMENT", userId), rootAttributes.getElementUuid(), userId, false);
         testNotificationDirectory(rootAttributes.getElementUuid(), NotificationType.UPDATE_DIRECTORY, userId);
 
-        ElementAttributes element2Attributes = directoryService.createElement(
-                DirectoryTestUtils.toElementAttributes(null, "element2", "TYPE", userId), rootAttributes.getElementUuid(), userId, false);
+        ElementAttributes composite2Attributes = directoryService.createElement(
+                DirectoryTestUtils.toElementAttributes(null, "composite2", "ELEMENT", userId), rootAttributes.getElementUuid(), userId, false);
         testNotificationDirectory(rootAttributes.getElementUuid(), NotificationType.UPDATE_DIRECTORY, userId);
 
-        // both elements reference the same origin node - the exact scenario from the bug report:
-        // two ELEMENT rows sharing one reference_id, both must move together
-        UUID originReferenceUuid = UUID.randomUUID();
-        ReferenceAttributes originReferenceAttributes = ReferenceAttributes.builder().referenceId(originReferenceUuid).referenceType(ReferenceType.STUDY_NODE).build();
+        // composite1 starts out referencing a study node
+        UUID nodeUuid = UUID.randomUUID();
+        ReferenceAttributes nodeReferenceAttributes = ReferenceAttributes.builder().referenceId(nodeUuid).referenceType(ReferenceType.STUDY_NODE).build();
 
-        mockMvc.perform(post(String.format("/v1/elements/%s/references", element1Attributes.getElementUuid()))
+        mockMvc.perform(post(String.format("/v1/elements/%s/references", composite1Attributes.getElementUuid()))
                         .header("userId", userId)
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(originReferenceAttributes)))
+                        .content(objectMapper.writeValueAsString(nodeReferenceAttributes)))
                 .andExpect(status().isOk());
         testNotificationDirectory(rootAttributes.getElementUuid(), NotificationType.UPDATE_DIRECTORY, userId);
 
-        mockMvc.perform(post(String.format("/v1/elements/%s/references", element2Attributes.getElementUuid()))
+        // composite2 starts out referencing an existing network-modification composite
+        ElementAttributes originModificationAttributes = directoryService.createElement(
+                DirectoryTestUtils.toElementAttributes(null, "originModification", "ELEMENT", userId), rootAttributes.getElementUuid(), userId, false);
+        testNotificationDirectory(rootAttributes.getElementUuid(), NotificationType.UPDATE_DIRECTORY, userId);
+        UUID originModificationUuid = originModificationAttributes.getElementUuid();
+        ReferenceAttributes modificationReferenceAttributes = ReferenceAttributes.builder().referenceId(originModificationUuid).referenceType(ReferenceType.NETWORK_MODIFICATION).build();
+
+        mockMvc.perform(post(String.format("/v1/elements/%s/references", composite2Attributes.getElementUuid()))
                         .header("userId", userId)
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(originReferenceAttributes)))
+                        .content(objectMapper.writeValueAsString(modificationReferenceAttributes)))
                 .andExpect(status().isOk());
         testNotificationDirectory(rootAttributes.getElementUuid(), NotificationType.UPDATE_DIRECTORY, userId);
 
-        // move both elements' reference from originReferenceUuid to targetReferenceUuid in one call
-        UUID targetReferenceUuid = UUID.randomUUID();
+        // a real network-modification composite, used as composite1's new reference target
+        ElementAttributes targetModificationAttributes = directoryService.createElement(
+                DirectoryTestUtils.toElementAttributes(null, "targetModification", "ELEMENT", userId), rootAttributes.getElementUuid(), userId, false);
+        testNotificationDirectory(rootAttributes.getElementUuid(), NotificationType.UPDATE_DIRECTORY, userId);
+        UUID targetModificationUuid = targetModificationAttributes.getElementUuid();
+
+        // composite1 moves from the study node to the network-modification composite
         mockMvc.perform(put("/v1/elements/references")
                         .header("userId", userId)
-                        .param("ids", element1Attributes.getElementUuid().toString(), element2Attributes.getElementUuid().toString())
-                        .param("originReferenceUuid", originReferenceUuid.toString())
-                        .param("targetReferenceUuid", targetReferenceUuid.toString())
+                        .param("ids", composite1Attributes.getElementUuid().toString())
+                        .param("originReferenceUuid", nodeUuid.toString())
+                        .param("targetReferenceUuid", targetModificationUuid.toString())
+                        .param("targetReferenceType", ReferenceType.NETWORK_MODIFICATION.name()))
+                .andExpect(status().isOk());
+
+        // composite2 moves from the network-modification composite to a study node
+        UUID targetNodeUuid = UUID.randomUUID();
+        mockMvc.perform(put("/v1/elements/references")
+                        .header("userId", userId)
+                        .param("ids", composite2Attributes.getElementUuid().toString())
+                        .param("originReferenceUuid", originModificationUuid.toString())
+                        .param("targetReferenceUuid", targetNodeUuid.toString())
                         .param("targetReferenceType", ReferenceType.STUDY_NODE.name()))
                 .andExpect(status().isOk());
 
-        // one UPDATE_DIRECTORY notification per moved element, both pointing at the same parent directory
+        // one UPDATE_DIRECTORY notification per moved composite, both pointing at the same parent directory
         assertDirectoriesNotified(Set.of(rootAttributes.getElementUuid()), 2, userId);
 
-        // fetch each element individually with references - the bulk GET /v1/elements endpoint doesn't return them
-        ElementAttributes updatedElement1 = directoryService.getElementWithReferences(element1Attributes.getElementUuid());
-        ElementAttributes updatedElement2 = directoryService.getElementWithReferences(element2Attributes.getElementUuid());
+        // fetch each composite individually with references
+        ElementAttributes updatedComposite1 = directoryService.getElementWithReferences(composite1Attributes.getElementUuid());
+        ElementAttributes updatedComposite2 = directoryService.getElementWithReferences(composite2Attributes.getElementUuid());
 
-        // BOTH elements must now reference targetReferenceUuid - this is the regression case: mutating a field
-        // on an object already inside a Hibernate bag collection doesn't reliably mark it dirty for flush
-        assertEquals(1, updatedElement1.getReferences().size());
-        assertEquals(targetReferenceUuid, updatedElement1.getReferences().get(0).getReferenceId());
-        assertEquals(ReferenceType.STUDY_NODE, updatedElement1.getReferences().get(0).getReferenceType());
+        // composite1 now references the network-modification composite
+        assertEquals(1, updatedComposite1.getReferences().size());
+        assertEquals(targetModificationUuid, updatedComposite1.getReferences().getFirst().getReferenceId());
+        assertEquals(ReferenceType.NETWORK_MODIFICATION, updatedComposite1.getReferences().getFirst().getReferenceType());
 
-        assertEquals(1, updatedElement2.getReferences().size());
-        assertEquals(targetReferenceUuid, updatedElement2.getReferences().get(0).getReferenceId());
-        assertEquals(ReferenceType.STUDY_NODE, updatedElement2.getReferences().get(0).getReferenceType());
+        // composite2 now references the study node
+        assertEquals(1, updatedComposite2.getReferences().size());
+        assertEquals(targetNodeUuid, updatedComposite2.getReferences().getFirst().getReferenceId());
+        assertEquals(ReferenceType.STUDY_NODE, updatedComposite2.getReferences().getFirst().getReferenceType());
     }
 
     @Test
@@ -2569,27 +2590,29 @@ class DirectoryTest {
 
     @Test
     @SneakyThrows
-    void testUpdateElementsReferencesNoMatchingOriginIsNoOp() {
+    void testUpdateElementsReferencesWithNoMatchingElements() {
         String userId = "user";
 
         ElementAttributes rootAttributes = directoryService.createRootDirectory(new RootDirectoryAttributes("root", userId, null, null, null, null), userId);
         testNotificationDirectory(rootAttributes.getElementUuid(), NotificationType.ADD_DIRECTORY, userId);
 
-        ElementAttributes elementAttributes = directoryService.createElement(
-                DirectoryTestUtils.toElementAttributes(null, "element1", "TYPE", userId), rootAttributes.getElementUuid(), userId, false);
+        ElementAttributes compositeAttributes = directoryService.createElement(
+                DirectoryTestUtils.toElementAttributes(null, "composite", "TYPE", userId), rootAttributes.getElementUuid(), userId, false);
         testNotificationDirectory(rootAttributes.getElementUuid(), NotificationType.UPDATE_DIRECTORY, userId);
 
-        // element has no reference matching this origin - the reference list itself must stay untouched
+        // composite has no reference matching this study node - the reference list itself must stay untouched
+        UUID unknownNodeUuid = UUID.randomUUID();
+        UUID unknownTargetNodeUuid = UUID.randomUUID();
         mockMvc.perform(put("/v1/elements/references")
                         .header("userId", userId)
-                        .param("ids", elementAttributes.getElementUuid().toString())
-                        .param("originReferenceUuid", UUID.randomUUID().toString())
-                        .param("targetReferenceUuid", UUID.randomUUID().toString())
+                        .param("ids", compositeAttributes.getElementUuid().toString())
+                        .param("originReferenceUuid", unknownNodeUuid.toString())
+                        .param("targetReferenceUuid", unknownTargetNodeUuid.toString())
                         .param("targetReferenceType", ReferenceType.STUDY_NODE.name()))
                 .andExpect(status().isOk());
-        testNotificationDirectory(rootAttributes.getElementUuid(), NotificationType.UPDATE_DIRECTORY, userId);
+        assertDirectoriesNotified(Set.of(), 0, userId);
 
-        ElementAttributes unchangedElement = directoryService.getElementWithReferences(elementAttributes.getElementUuid());
-        assertTrue(unchangedElement.getReferences() == null || unchangedElement.getReferences().isEmpty());
+        ElementAttributes unchangedComposite = directoryService.getElementWithReferences(compositeAttributes.getElementUuid());
+        assertTrue(unchangedComposite.getReferences() == null || unchangedComposite.getReferences().isEmpty());
     }
 }
